apps/argocd/04-application-controller-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-application-controller
  namespace: argocd
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: node01
